(master): Fix positioning of multi-select on iphone 5

--- a/src/pages/home-page/home-page.sass
+++ b/src/pages/home-page/home-page.sass
@@ -6,12 +6,5 @@ klatsch-home-page
     height: calc(100vh - 197px)
     min-height: 600px
     overflow: hidden
-    .top-bar
-      width: 100%
-      height: 60px
-      background-color: snow
-      position: fixed
-      .action-container
-          display: inline-block
-          margin-top: 10px
+
 
