--- a/src/pages/home-page/login-bar/login-bar.sass
+++ b/src/pages/home-page/login-bar/login-bar.sass
@@ -1,3 +1,1 @@
-.klatsch-login-button
-  position: absolute
-  right: 50px
+
