--- a/src/pages/home-page/sign-up-bar/sign-up-bar.sass
+++ b/src/pages/home-page/sign-up-bar/sign-up-bar.sass
@@ -1,5 +1,3 @@
-form
-  float: left
-  .row
-    margin-top: -10px
+.age-select
+  padding-left: 0
 
